--- a/gcp_appengine_data.example/index.html
+++ b/gcp_appengine_data.example/index.html
@@ -9,10 +9,10 @@
         <p>Check out these URLs:</p>
         <p>
             <ul>
-                <li><a href="/cmd">/cmd - run a shell command by entering something like "password.s echo 123".</a></li>
-                <li><a href="/info">/info - inspect the program and system environment.</a></li>
-                <li><a href="/proxy?u=https://google.com">/proxy - a rudimentary web proxy. Write down the intended destination URL like this: "/proxy?u=https://google.com"</a></li>
-                <li><a href="/myrequest">/myrequest - read back my HTTP request and see how middleware(s) have mangled with and altered your HTTP request.</a></li>
+                <li><a href="/cmd">/cmd</a> - run a shell command by entering something like "password.s echo 123".</li>
+                <li><a href="/info">/info</a> - inspect the program and system environment.</li>
+                <li><a href="/proxy?u=https://google.com">/proxy</a> - a rudimentary web proxy. Write down the intended destination URL like this: "/proxy?u=https://google.com"</li>
+                <li><a href="/myrequest">/myrequest</a> - read back my HTTP request and see how middleware(s) have mangled with and altered your HTTP request.</li>
             </ul>
         </p>
     </body>
