--- a/gcp_appengine_data.example/index.html
+++ b/gcp_appengine_data.example/index.html
@@ -1,11 +1,10 @@
 <html>
 
-    <head><title>Welcome to appengine!</title></head>
+    <head><title>A demo appengine app brought to you by laitos open source project</title></head>
 
     <body>
         <h1>Hello from appengine!</h1>
-        <p>This is a demo app.</p>
-        <br/>
+        <p>This is a demo app, brought to you by the <a href="https://github.com/HouzuoGuo/laitos">laitos</a> open source project.</p>
         <p>Check out these URLs:</p>
         <p>
             <ul>
