--- a/gcp_appengine_data.example/index.html
+++ b/gcp_appengine_data.example/index.html
@@ -10,8 +10,12 @@
             <ul>
                 <li><a href="/cmd">/cmd</a> - run a shell command by entering something like "password.s echo 123".</li>
                 <li><a href="/info">/info</a> - inspect the program and system environment.</li>
-                <li><a href="/proxy?u=https://google.com">/proxy</a> - a rudimentary web proxy. Write down the intended destination URL like this: "/proxy?u=https://google.com"</li>
+                <li><a href="/latest_requests?e=1">/latest_requests?e=1</a> - start recording incoming HTTP request.</li>
+                <li><a href="/latest_requests">/latest_requests</a> - inspect recorded HTTP requests.</li>
                 <li><a href="/myrequest">/myrequest</a> - read back my HTTP request and see how middleware(s) have mangled with and altered your HTTP request.</li>
+                <li><a href="/proc?pid=0">/proc</a> - inspect a system procese by PID.</li>
+                <li><a href="/proxy?u=https://google.com">/proxy</a> - a rudimentary web proxy. Write down the intended destination URL like this: "/proxy?u=https://google.com"</li>
+                <li><a href="/upload">/upload</a> - upload a file and retrieve it later.</li>
             </ul>
         </p>
     </body>
